--- a/css/styles.css
+++ b/css/styles.css
@@ -315,6 +315,20 @@ a:hover {
 	#sponsors-section img {
 		padding-top:20px;
 	}
+
+
+@media screen and (min-width: 1500px) {
+	#girl-svg {
+		width:60%;
+		margin-left:20%;
+		margin-right:20%;
+		padding-bottom: 60%
+	}
+	#about-section {
+		padding-top:200px;
+	}
+}
+
 /* styles for small desktop / tablet */
 @media screen and (max-width: 1100px) {
 	.menu {
@@ -426,7 +440,7 @@ a:hover {
 	}
 }
 
-@media screen and (max-height: 650px) {
+@media screen and (max-height: 600px) {
 	#girl-svg {
 		width:60%;
 		margin-left:20%;
