--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,12 @@ body {
     font-style: normal;
 
 }
-
+#menu-wrapper {
+	height:80px;
+	background-color:#462959;
+	width:100%;
+	position:fixed;
+}
 .menu {
 	width:40%;
 	position: fixed;
@@ -111,7 +116,7 @@ body {
 	top: 0;
 	left: 0;
 	}
-	#girl h2 {
+	h2 {
 		text-align: center;
 		color:#fff;
 		font-family: 'LMP';
@@ -315,7 +320,65 @@ a:hover {
 	#sponsors-section img {
 		padding-top:20px;
 	}
+.wrapper {
+	float:left;
+	width:40%;
+	margin:130px 3%;
+}
+.articles, .events {
+	width:24%;
+}
+.youtube {
+	margin:150px 0;
+}
+.wrapper h2 {
+	color:#a27994;
+	font-size:50px;
+	text-align: left
+}
+.wrapper a {
+	text-decoration: underline;
+}
+.wrapper a:hover {
+	color:#a27994;
+}
+.wrapper a:visited {
+	color:#626262;
+}
+.articles p {
+	padding-top:15px;
+}
+.articles h2 {
+	margin-left:30px;
+}
+.articles h5 {
+	font-family: 'LMP';
+	font-size: 34px;
+	letter-spacing: 2px;
+	text-align: center;
+	margin-top:20px;
+	color:#a27994;
+}
+.youtube h2:first-child {
+	color:#462959;
+	font-size:40px;
+	padding-bottom:10px;
+}
+.youtube p {
+	padding-top:5px;
+}
+.youtube h2, .youtube p {
+	margin-left:30px;
+}
 
+@media screen and (max-height: 600px) {
+	#girl-svg {
+		width:60%;
+		margin-left:20%;
+		margin-right:20%;
+		padding-bottom: 60%
+	}
+}
 
 @media screen and (min-width: 1500px) {
 	#girl-svg {
@@ -400,6 +463,7 @@ a:hover {
 
 }
 
+
 /* styles for mobile */
 @media screen and (max-width: 700px) {
 	.menu {
@@ -437,15 +501,6 @@ a:hover {
 	}
 	#register-1 {
 		display:none;
-	}
-}
-
-@media screen and (max-height: 600px) {
-	#girl-svg {
-		width:60%;
-		margin-left:20%;
-		margin-right:20%;
-		padding-bottom: 60%
 	}
 }
 
