--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	font-family: 'Fira Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -251,7 +251,7 @@ a:hover {
 	}
 	#schedule-section .time {
 		float: left;
-		font-family: LMP;
+		font-family: 'LMP';
 		font-size:24px;
 		letter-spacing: 1.5px;
 		width:100px;
@@ -345,8 +345,8 @@ a:hover {
 .wrapper a:visited {
 	color:#626262;
 }
-.articles p {
-	padding-top:15px;
+.wrapper p {
+	padding-top:18px;
 }
 .articles h2 {
 	margin-left:30px;
@@ -363,6 +363,9 @@ a:hover {
 	color:#462959;
 	font-size:40px;
 	padding-bottom:10px;
+}
+.youtube h2:nth-of-type(3), .events h2:nth-of-type(2) {
+	margin-top:30px;
 }
 .youtube p {
 	padding-top:5px;
